--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
+  <title>The Paradox of God -- Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description" content="A reflection on the paradox of a perfect, all-knowing God and a flawed creation, questioning free will, blame, and the image of God we were taught to believe in.">
   <meta property="og:description" content="A reflection on the paradox of a perfect, all-knowing God and a flawed creation, questioning free will, blame, and the image of God we were taught to believe in.">
@@ -15,13 +15,13 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Paradox of God — Solitude Reflections">
+  <meta property="og:title" content="The Paradox of God -- Solitude Reflections">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
+  <meta name="twitter:title" content="The Paradox of God -- Solitude Reflections">
   <meta name="twitter:description" content="A reflection on divine perfection, free will, and the questions that never die.">
   <meta name="twitter:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
 
@@ -60,8 +60,8 @@
 
   <style>
     body {
-      background:#1f1815;
-      color:#f3e6dd;
+      background:#fffaf7;
+      color:#42291e;
       margin:0;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
     }
@@ -83,13 +83,13 @@
     .ref-header-inner {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 0.55rem 1rem 0.5rem;
+      padding: 0.55rem 1rem 0.65rem;
       display: flex;
       flex-direction: column;
       gap: 0.4rem;
     }
 
-    /* Top row: title + subtitle + badge */
+    /* Top row: title + subtitle */
     .header-top {
       display:flex;
       align-items:flex-start;
@@ -102,19 +102,18 @@
       flex-direction:column;
       min-width:0;
     }
-
     .title-block h1 {
       margin:0;
       font-size:1.6rem;
       letter-spacing:.04em;
     }
-
     .title-block p.sub {
       margin:.25rem 0 0;
       font-size:.9rem;
       color:#c9b0a4;
     }
 
+    /* Right in top row: small current-page badge */
     .current-page-badge {
       display:inline-flex;
       align-items:center;
@@ -128,13 +127,12 @@
       white-space:nowrap;
       flex-shrink:0;
     }
-
     .page-icon {
       font-size:0.85rem;
       color:#ffb347;
     }
 
-    /* Bottom row: hamburger + nav + brand/logo */
+    /* Bottom row: hamburger + nav + brand on right */
     .header-bottom {
       display:flex;
       align-items:center;
@@ -191,6 +189,7 @@
       font-weight:600;
     }
 
+    /* Brand / logo on the right */
     .header-brand {
       display:flex;
       align-items:center;
@@ -232,97 +231,13 @@
       opacity:0.8;
     }
 
-    /* ========== HAMBURGER DROPDOWN: LIST OF REFLECTION PAGES ========== */
-    .hamburger-menu {
-      max-width:1100px;
-      margin:0 auto;
-      overflow:hidden;
-      max-height:0;
-      transition:max-height 0.25s ease;
-      padding:0 1rem;
-    }
-
-    .ref-header.menu-open .hamburger-menu {
-      max-height:260px; /* enough space for list */
-    }
-
-    .hamburger-inner {
-      margin:0.4rem 0 0.5rem;
-      padding:0.6rem 0.8rem;
-      border-radius:12px;
-      background:#382822;
-      border:1px solid rgba(255,255,255,0.08);
-      box-shadow:0 8px 18px rgba(0,0,0,0.5);
-    }
-
-    .hamburger-inner p.label {
-      margin:0 0 0.4rem;
-      font-size:0.78rem;
-      text-transform:uppercase;
-      letter-spacing:0.08em;
-      color:#c9b0a4;
-      opacity:0.9;
-    }
-
-    .hamburger-list {
-      list-style:none;
-      margin:0;
-      padding:0;
-      display:flex;
-      flex-direction:column;
-      gap:0.25rem;
-    }
-
-    .hamburger-list a {
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      text-decoration:none;
-      font-size:0.85rem;
-      padding:0.32rem 0.55rem;
-      border-radius:8px;
-      color:#f3e6dd;
-      border:1px solid transparent;
-    }
-
-    .hamburger-list a span.title {
-      flex:1;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-
-    .hamburger-list a span.chevron {
-      font-size:0.8rem;
-      margin-left:0.25rem;
-      opacity:0.7;
-    }
-
-    .hamburger-list a:hover {
-      border-color:rgba(255,107,61,0.5);
-      background:rgba(255,107,61,0.08);
-    }
-
-    .hamburger-list a.active {
-      border-color:#ff6b3d;
-      background:rgba(255,107,61,0.2);
-      font-weight:600;
-    }
-
     /* =========================
        MAIN LAYOUT
     ========================== */
-    .page-wrap {
-  max-width: 780px;
-  margin: 0 auto;
-  /* extra top padding so content clears the header */
-  padding: 4.5rem 1.25rem 3rem;
-}
-    
     .page-content {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 4.7rem 1rem 2.5rem; /* base space for header */
+      padding: 6.6rem 1rem 2.5rem; /* space for header */
     }
 
     .content {
@@ -345,87 +260,80 @@
 
     /* =========================
        AUDIO PLAYLIST (tighter)
-    ====/* AUDIO PLAYLIST – CLEAN LOOK */
-.audio-wrapper {
-  margin: 0.4rem 0 0;
-  padding: 0.8rem 0.2rem 0.2rem;
-  border-radius: 10px;
-}
+    ========================== */
+    .audio-wrap {
+      max-width: 800px;
+      margin: 0.8rem auto 1.2rem auto;
+      padding: 0.75rem 0.85rem;
+      border-radius: 14px;
+      background: #2b211e;
+      border: 1px solid rgba(255, 107, 61, 0.35);
+    }
 
-/* Main audio element */
-#reflectionAudio {
-  width: 100%;
-  display: block;
-}
+    #reflectionAudio {
+      width: 100%;
+      display: block;
+    }
 
-/* Playlist container */
-.playlist {
-  margin-top: 0.75rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.35rem;
-}
+    .playlist {
+      margin-top: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+    }
 
-/* Each track */
-.playlist-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
-  padding: 0.7rem 1rem;
-  background: #1f1815;
-  border-radius: 8px;
-  cursor: pointer;
+    .playlist-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.45rem 0.85rem;
+      background: #1f1815;
+      border-radius: 8px;
+      cursor: pointer;
+      border: 1px solid #2b221f;
+      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+    }
 
-  /* removed border here */
-  border: none;
+    .playlist-row:hover {
+      border-color: #ff6b3d;
+    }
 
-  transition: background 0.15s ease, box-shadow 0.2s ease;
-}
+    .playlist-row.active {
+      background: #322621;
+      border-color: #ff6b3d;
+      box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
+    }
 
-/* Hover (subtle only) */
-.playlist-row:hover {
-  background: #241d1a;
-}
+    .playlist-main {
+      display: flex;
+      flex-direction: column;
+      gap: 0.1rem;
+      overflow: hidden;
+    }
 
-/* Active track highlight — NO border, just glow */
-.playlist-row.active {
-  background: #322621;
-  box-shadow: 0 0 12px rgba(255, 107, 61, 0.35);
-}
+    .playlist-title {
+      font-size: 0.96rem;
+      font-weight: 600;
+      color: #f3e6dd;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
-/* Title & subtitle */
-.playlist-main {
-  display: flex;
-  flex-direction: column;
-  gap: 0.1rem;
-  overflow: hidden;
-}
+    .playlist-sub {
+      font-size: 0.78rem;
+      color: #b29587;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
-.playlist-title {
-  font-size: 0.98rem;
-  font-weight: 600;
-  color: #f3e6dd;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.playlist-sub {
-  font-size: 0.8rem;
-  color: #b29587;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-/* Duration */
-.playlist-duration {
-  font-size: 0.85rem;
-  color: #c9b0a4;
-  margin-left: 1rem;
-  flex-shrink: 0;
-}
+    .playlist-duration {
+      font-size: 0.82rem;
+      color: #c9b0a4;
+      margin-left: 0.75rem;
+      flex-shrink: 0;
+    }
 
     /* =========================
        SHARE / REPLAY
@@ -509,7 +417,7 @@
         flex-wrap:wrap;
       }
       .header-brand {
-        display:none;
+        display:none; /* hide logo on very small screens if space is tight */
       }
     }
   </style>
@@ -544,11 +452,11 @@
 
       <!-- BOTTOM ROW: hamburger + nav + brand/logo -->
       <div class="header-bottom">
-        <button class="nav-toggle" type="button" aria-label="Reflections menu" aria-expanded="false">
+        <button class="nav-toggle" type="button" aria-label="Menu">
           ☰
         </button>
 
-        <nav class="ref-nav" aria-label="Main navigation">
+        <nav class="ref-nav" aria-label="Reflections navigation">
           <ul>
             <li><a href="/reflections/index.html" class="active">Home</a></li>
             <li><a href="/">Stone Grill Resto</a></li>
@@ -565,51 +473,6 @@
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
-      </div>
-    </div>
-
-    <!-- HAMBURGER DROPDOWN: LIST OF REFLECTIONS PAGES -->
-    <div class="hamburger-menu" aria-hidden="true">
-      <div class="hamburger-inner">
-        <p class="label">Reflections</p>
-        <ul class="hamburger-list">
-          <li>
-            <a href="/reflections/pages/the-paradox-of-god/read.html" class="active">
-              <span class="title">The Paradox of God</span>
-              <span class="chevron">›</span>
-            </a>
-          </li>
-          <li>
-            <a href="/reflections/pages/divine-hiddeness/read.html">
-              <span class="title">The Divine Premise</span>
-              <span class="chevron">›</span>
-            </a>
-          </li>
-          <li>
-            <a href="/reflections/pages/the-lost-language-of-metaphor/read.html">
-              <span class="title">The Lost Language of Metaphor</span>
-              <span class="chevron">›</span>
-            </a>
-          </li>
-          <li>
-            <a href="/reflections/pages/the-madness-of-fath/read.html">
-              <span class="title">The Madness of Faith</span>
-              <span class="chevron">›</span>
-            </a>
-          </li>
-          <li>
-            <a href="/reflections/pages/the-god-we-created/read.html">
-              <span class="title">The God We Created</span>
-              <span class="chevron">›</span>
-            </a>
-          </li>
-          <li>
-            <a href="/reflections/pages/initial-premise/read.html">
-              <span class="title">The Fullness that Needs Nothing</span>
-              <span class="chevron">›</span>
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
   </header>
@@ -645,16 +508,16 @@
         </div>
       </section>
 
-      <div class="divider">— ❖ —</div>
+      <div class="divider">-- ❖ --</div>
 
-      <!-- ARTICLE CONTENT -->
-      <p>There is a strange tension at the heart of the divine — a paradox that religion often avoids but the soul keeps returning to.</p>
+      <!-- ARTICLE CONTENT (no extra H2 title) -->
+      <p>There is a strange tension at the heart of the divine -- a paradox that religion often avoids but the soul keeps returning to.</p>
       <p>We are told that God is perfect, yet creates what is flawed. All-knowing, yet surprised by disobedience. All-powerful, yet wounded by human failure. Loving, yet capable of wrath so great that entire worlds tremble.</p>
       <p>If everything is foreseen, written, and woven into a plan, then what part of us is truly free? And why would a perfect being design a story where the creation is destined to fail, only to be judged for fulfilling the script?</p>
-      <p>Free will is described as a gift of love — but a gift that leads to condemnation feels less like love and more like a test that no one asked for.</p>
+      <p>Free will is described as a gift of love -- but a gift that leads to condemnation feels less like love and more like a test that no one asked for.</p>
       <p>If the creator knew the ending from the beginning, if the architect designed both the flaw and the consequence, then where does accountability begin? How can the clay be blamed for cracks that the potter himself shaped into its form?</p>
-      <p>Perhaps the paradox isn’t about God at all, but about the image of God humanity created — a being modeled after our fears, our longing for order, our desperate need to make meaning out of suffering.</p>
-      <p>Maybe what we call “God” is not a judge writing destinies, but a metaphor for the mystery we cannot name — the vastness that invites us to question, to seek, to wonder.</p>
+      <p>Perhaps the paradox isn't about God at all, but about the image of God humanity created -- a being modeled after our fears, our longing for order, our desperate need to make meaning out of suffering.</p>
+      <p>Maybe what we call "God" is not a judge writing destinies, but a metaphor for the mystery we cannot name -- the vastness that invites us to question, to seek, to wonder.</p>
       <p>And in that wondering, we discover something deeper: that truth is not found in answers that silence the mind, but in questions that awaken the soul.</p>
       <p>This is the paradox of God.</p>
 
@@ -677,28 +540,14 @@
 
   <!-- ========== SCRIPTS ========== -->
   <script>
-    // Hamburger toggle for reflections list
+    // Simple hamburger behavior: scroll to top (nav is always visible)
     document.addEventListener('DOMContentLoaded', () => {
-      const header   = document.querySelector('.ref-header');
-      const toggle   = document.querySelector('.nav-toggle');
-      const flyout   = document.querySelector('.hamburger-menu');
-
-      if (!header || !toggle || !flyout) return;
-
-      toggle.addEventListener('click', () => {
-        const isOpen = header.classList.toggle('menu-open');
-        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
-        flyout.setAttribute('aria-hidden', isOpen ? 'false' : 'true');
-      });
-
-      // Close menu when a reflection link is clicked
-      flyout.addEventListener('click', (e) => {
-        if (e.target.tagName.toLowerCase() === 'a' || e.target.closest('a')) {
-          header.classList.remove('menu-open');
-          toggle.setAttribute('aria-expanded', 'false');
-          flyout.setAttribute('aria-hidden', 'true');
-        }
-      });
+      const menuBtn = document.querySelector('.nav-toggle');
+      if (menuBtn) {
+        menuBtn.addEventListener('click', () => {
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+      }
     });
   </script>
 
@@ -779,7 +628,7 @@
       if (shareBtn) {
         shareBtn.addEventListener('click', async () => {
           const url   = window.location.href;
-          const title = 'The Paradox of God — Solitude Reflections';
+          const title = 'The Paradox of God -- Solitude Reflections';
           const text  = 'A reflection by Ninox Antolihao on the paradox of a perfect God and a flawed world.';
 
           if (navigator.share) {
