--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -250,7 +250,7 @@
       margin:0.4rem 0 0.5rem;
       padding:0.6rem 0.8rem;
       border-radius:12px;
-      background:#332520;
+      background:#241b18;
       border:1px solid rgba(255,255,255,0.08);
       box-shadow:0 8px 18px rgba(0,0,0,0.5);
     }
@@ -341,11 +341,11 @@
     ========================== */
     .audio-wrap {
       max-width: 800px;
-      margin: 1rem auto 1.2rem auto;
-      padding: 0.85rem 0.95rem;
+      margin: 0.8rem auto 1.2rem auto;
+      padding: 0.75rem 0.85rem;
       border-radius: 14px;
-      background: #2b211e;
-      border: 2px solid rgba(255, 107, 61, 0.35);
+      background: #302521;
+      border: 1px solid rgba(255, 107, 61, 0.35);
     }
 
     #reflectionAudio {
@@ -364,7 +364,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0.35rem 0.85rem;
+      padding: 0.45rem 0.85rem;
       background: #1f1815;
       border-radius: 8px;
       cursor: pointer;
