--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -250,7 +250,7 @@
       margin:0.4rem 0 0.5rem;
       padding:0.6rem 0.8rem;
       border-radius:12px;
-      background: #5e382a
+      background: #54362b;
       border:1px solid rgba(255,255,255,0.08);
       box-shadow:0 8px 18px rgba(0,0,0,0.5);
     }
