--- a/reflections/pages/belief/index.html
+++ b/reflections/pages/belief/index.html
@@ -269,7 +269,7 @@
 
     </div>
   
-    <script>
+     <script>
     // Hamburger toggle for mobile
     (function () {
       const header = document.querySelector('.ref-header');
@@ -337,7 +337,7 @@
     function sharePage() {
       if (navigator.share) {
         navigator.share({
-          title: "The Primacy of Moral Accountability -- Ninox Antolihao",
+          title: "The Primacy of Moral Accountability — Ninox Antolihao",
           url: window.location.href
         });
       } else {
@@ -347,4 +347,3 @@
   </script>
 </body>
 </html>
-  
