--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -75,7 +75,7 @@
       left: 0;
       right: 0;
       z-index: 1000;
-      background: #1f1815;
+      background: #000001;
       border-bottom: 2px solid rgba(255, 255, 255, 0.08);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
     }
