--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -37,7 +37,7 @@
       left: 0;
       right: 0;
       z-index: 1000;
-      background: #1f1815;
+      background: #120b07;
       border-bottom: 1px solid rgba(255, 255, 255, 0.06);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
     }
@@ -462,8 +462,6 @@
     <!-- Inside read.html -->
     <header>
       <img src="11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png" alt="Stone Grill Logo">
-      <h1>The God We Created</h1>
-      <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
     </header>
 
     <!-- 🎧 Audio Player (same folder) -->
