--- a/reflections/pages/belief/index.html
+++ b/reflections/pages/belief/index.html
@@ -1,58 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Belief and Goodness — Ninox Antolihao</title>
-  <meta name="description" content="Belief is awareness, not alignment. Goodness is the direction of the heart. A reflection by Ninox Antolihao." />
+  <!-- ========== META & HEAD ========== -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>The Madness of Faith -- Ninox Antolihao</title>
+  <meta name="description" content="Let faith never destroy. Let it guide.">
 
-  <!-- 🔗 Omnibus player + stylesheet -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css">
-  <script src="/reflections/assets/audio-system.js"></script>
+  <meta property="og:title" content="The Madness of Faith -- Ninox Antolihao">
+  <meta property="og:description" content="Let faith never destroy. Let it guide.">
+  <meta property="og:image" content="cover.png">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html">
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/belief/index.html" />
-
-  <!-- Favicon (optional) -->
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="Belief and Goodness — Ninox Antolihao">
-  <meta property="og:description" content="Belief is awareness, not alignment. Goodness is the direction of the heart.">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/belief/index.html">
-  <meta property="og:site_name" content="Moments of Solitude — Stone Grill Press">
-  <!-- Use an absolute URL. Place cover.jpg in this page folder (1200×630 recommended). -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/belief/belief.png">
-  <meta property="og:image:secure_url" content="https://stonegrillresto.net/reflections/pages/belief/belief.png">
-  <meta property="og:image:width" content="240">
-  <meta property="og:image:height" content="360">
+  <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Belief and Goodness — Ninox Antolihao">
-  <meta name="twitter:description" content="Belief is awareness, not alignment. Goodness is the direction of the heart.">
-  <meta name="twitter:image" content="https://stonegrillresto.net/reflections/pages/belief-and-goodness/cover.jpg">
-
-  <!-- JSON-LD (Article) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "Belief and Goodness",
-    "author": { "@type": "Person", "name": "Ninox Antolihao" },
-    "publisher": {
-      "@type": "Organization",
-      "name": "Stone Grill Press",
-      "logo": { "@type": "ImageObject", "url": "https://stonegrillresto.net/reflections/assets/logo.png" }
-    },
-    "datePublished": "2025-10-24",
-    "image": "https://stonegrillresto.net/reflections/pages/belief-and-goodness/cover.jpg",
-    "description": "Belief is awareness, not alignment. Goodness is the direction of the heart."
-  }
-  </script>
-
-   <style>
+  <style>
     /* =========================
        GLOBAL FIXED HEADER
     ========================== */
@@ -106,125 +73,260 @@
       font-size: 0.9rem;
       font-weight: 600;
       letter-spacing: 0.04em;
-      white-space: nowrap;
-      position: relative;
-      margin-top: 6px;
-      color: #444;
-      font-size: 14px;
+      text-transform: uppercase;
+      color: #ffffff;
     }
 
-    .scrolling-subtitle span {
-      display: inline-block;
-      animation: smoothScroll 18s linear infinite;
+    .brand-subtitle {
+      font-size: 0.7rem;
+      color: #f0e0d0;
+      opacity: 0.8;
     }
 
-    @keyframes smoothScroll {
-      0% { transform: translateX(100%); }
-      10% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
+    /* Nav */
+    .ref-nav {
+      margin-left: 1rem;
+      flex: 1;
     }
 
-    /* Audio playlist styling */
-    .audio-wrapper {
-      margin: 1rem 0;
-      padding: 0.8rem;
-      background: #2a211e;
-      border-radius: 14px;
-    }
-
-    #reflectionAudio {
-      width: 100%;
-      display: block;
-    }
-
-    .playlist {
-      margin-top: 0.5rem;
+    .ref-nav ul {
       display: flex;
-      flex-direction: column;
-      gap: 0.2rem;
+      gap: 0.75rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
     }
 
-    .playlist-row {
+    .ref-nav a {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.35rem 0.7rem;
+      border-radius: 999px;
+      font-size: 0.8rem;
+      text-decoration: none;
+      color: #f3e4d5;
+      border: 1px solid transparent;
+      white-space: nowrap;
+      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+
+    .ref-nav a:hover {
+      background: rgba(255, 107, 61, 0.14);
+      border-color: rgba(255, 107, 61, 0.4);
+    }
+
+    .ref-nav a.active {
+      background: #ff6b3d;
+      color: #1f1815;
+      border-color: #ff6b3d;
+      font-weight: 600;
+    }
+
+    /* Right side of header */
+    .ref-header-right {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      padding: 0.4rem 1rem;
-      background: #1f1815;
-      border-radius: 8px;
-      cursor: pointer;
-      border: 1px solid #2b221f;
-      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+      gap: 0.75rem;
     }
 
-    .playlist-row:hover {
-      border-color: #ff6b3d;
+    .current-page-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      padding: 0.3rem 0.7rem;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      font-size: 0.75rem;
+      color: #f7e9dd;
     }
 
-    .playlist-row.active {
-      background: #322621;
-      border-color: #ff6b3d;
-      box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
-    }
-
-    .playlist-main {
-      display: flex;
-      flex-direction: column;
-      gap: 0.8rem;
-      overflow: hidden;
-    }
-
-    .playlist-title {
-      font-size: 0.98rem;
-      font-weight: 600;
-      color: #f3e6dd;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .playlist-sub {
-      font-size: 0.8rem;
-      color: #b29587;
-    }
-
-    .playlist-duration {
+    .page-icon {
       font-size: 0.85rem;
-      color: #c9b0a4;
-      margin-left: 1rem;
-      flex-shrink: 0;
+      color: #ffb347;
     }
 
-    /* Local nav buttons (back / share / audio) */
-    .nav-buttons {
-      margin-top: 8px;
-      display: flex;
-      gap: 8px;
+    .back-home-link {
+      font-size: 0.75rem;
+      text-decoration: none;
+      color: #ffb347;
+      padding: 0.3rem 0.5rem;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 179, 71, 0.5);
+      background: rgba(0, 0, 0, 0.25);
+      white-space: nowrap;
     }
 
-    .nav-buttons button {
-      background: #1f1f1f;
-      color: #fff;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 4px;
-      font-size: 13px;
+    .back-home-link:hover {
+      background: #ffb347;
+      color: #1f1815;
+    }
+
+    .nav-toggle {
+      display: none;
+      border: 1px solid rgba(255, 255, 255, 0.35);
+      background: transparent;
+      border-radius: 6px;
+      padding: 0.2rem 0.45rem;
+      font-size: 1.1rem;
+      color: #f7e9dd;
+    }
+
+    @media (max-width: 900px) {
+      .brand-subtitle {
+        display: none;
+      }
+
+      .ref-nav ul {
+        gap: 0.4rem;
+      }
+
+      .ref-nav a {
+        padding: 0.25rem 0.55rem;
+        font-size: 0.75rem;
+      }
+
+      .current-page-badge {
+        display: none;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .ref-header-inner {
+        flex-wrap: nowrap;
+      }
+
+      .ref-nav {
+        position: fixed;
+        top: 56px;
+        left: 0;
+        right: 0;
+        background: #1f1815;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.25s ease;
+        margin-left: 0;
+      }
+
+      .ref-nav ul {
+        flex-direction: column;
+        padding: 0.5rem 1rem 0.8rem;
+        gap: 0.25rem;
+      }
+
+      .ref-nav a {
+        width: 100%;
+        justify-content: flex-start;
+      }
+
+      .ref-header.nav-open .ref-nav {
+        max-height: 260px;
+      }
+
+      .nav-toggle {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .back-home-link {
+        font-size: 0.7rem;
+        padding: 0.2rem 0.45rem;
+      }
+    }
+
+    /* =========================
+       PAGE-SPECIFIC STYLES
+    ========================== */
+    body {
+      margin: 0;
+      padding: 4.2rem 0 0 0; /* space for fixed header */
+      background:#1f1815;
+      color:#f3e6dd;
+    }
+
+    main.page-wrap {
+      padding:0 1rem;
+    }
+
+    article.content {
+      max-width:800px;
+      margin:0 auto;
+      line-height:1.7;
+    }
+
+    header.page-header,
+    footer.page-footer {
+      padding:1rem;
+      text-align:center;
+    }
+
+    header.page-header img {
+      display:block;
+      margin:0 auto 1rem;
+      max-width:140px;
+      height:auto;
+    }
+
+    header.page-header {
+      padding-top:1rem;
+      padding-bottom:0.5rem;
     }
   </style>
 
   <!-- Service Worker -->
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js');
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .then(reg => console.log("SW registered"))
+        .catch(err => console.log("SW failed:", err));
     }
   </script>
-  
-  </head>
+</head>
 <body>
 
-    <div class="container">
-        <div class="/reflections/pages/question-label-sinner/label-sinner.jpeg">
-            Placeholder for Reflection Image/Cover
-            </div>
+  <!-- FIXED GLOBAL HEADER -->
+  <header class="ref-header">
+    <div class="ref-header-inner">
+
+      <!-- Left brand -->
+      <div class="ref-header-left">
+        <a href="/reflections/index.html" class="brand-link">
+          <span class="brand-mark">✦</span>
+          <span class="brand-text">
+            <span class="brand-title">Moments of Solitude</span>
+            <span class="brand-subtitle">Stone Grill Reflections</span>
+          </span>
+        </a>
+      </div>
+
+      <!-- Center nav -->
+      <nav class="ref-nav" aria-label="Reflections navigation">
+        <ul>
+          <li><a href="/reflections/index.html">All Reflections</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html" class="active">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
+        </ul>
+      </nav>
+
+
+        <a href="/reflections/index.html" class="back-home-link">← Back to Reflections</a>
+
+        <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+          ☰
+        </button>
+      </div>
+
+    </div>
+  </header>
+
+  <main class="page-wrap">
+    
 
         <div class="audio-player">
             <p style="margin-top:0; font-size: 0.9em; color: #666;">Listen to the reading:</p>
@@ -268,9 +370,39 @@
         </div>
 
     </div>
-  
-     <script>
-    // Hamburger toggle for mobile
+  </main>
+
+  <footer class="page-footer">
+    <p>© 2025 Ninox Antolihao · Stone Grill Press</p>
+  </footer>
+
+  <!-- Autoplay only (no extra back button injection; header handles nav) -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const audio = document.querySelector('audio');
+      const p = new URLSearchParams(location.search);
+      const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
+
+      if (fromIndex && audio) {
+        audio.play().catch(() => {
+          console.log('Autoplay blocked; user must press play.');
+        });
+        sessionStorage.removeItem('autoplayAudio');
+      }
+
+      // Simple stop button for native player
+      const stopBtn = document.getElementById('stopAudio');
+      if (stopBtn && audio) {
+        stopBtn.addEventListener('click', () => {
+          audio.pause();
+          audio.currentTime = 0;
+        });
+      }
+    });
+  </script>
+
+  <!-- Hamburger toggle for mobile header -->
+  <script>
     (function () {
       const header = document.querySelector('.ref-header');
       const toggle = document.querySelector('.nav-toggle');
@@ -290,60 +422,6 @@
         }
       });
     })();
-
-    // Audio playlist logic
-    document.addEventListener('DOMContentLoaded', () => {
-      const audioPlayer = document.getElementById('reflectionAudio');
-      const audioSource = document.getElementById('audioSource');
-      const rows = document.querySelectorAll('.playlist-row');
-
-      // Default track: first row
-      if (rows.length > 0) {
-        const firstSrc = rows[0].dataset.src;
-        audioSource.src = firstSrc;
-        audioPlayer.load();
-      }
-
-      // Clicking a row switches track
-      rows.forEach(row => {
-        row.addEventListener('click', () => {
-          rows.forEach(r => r.classList.remove('active'));
-          row.classList.add('active');
-
-          const src = row.dataset.src;
-          audioSource.src = src;
-          audioPlayer.load();
-          audioPlayer.play();
-        });
-      });
-
-      // Auto-fill durations
-      rows.forEach(row => {
-        const src = row.dataset.src;
-        const tempAudio = new Audio(src);
-        tempAudio.addEventListener('loadedmetadata', () => {
-          const dur = tempAudio.duration;
-          if (!isNaN(dur)) {
-            const total = Math.floor(dur);
-            const min = String(Math.floor(total / 60)).padStart(2, '0');
-            const sec = String(total % 60).padStart(2, '0');
-            const durEl = row.querySelector('.playlist-duration');
-            if (durEl) durEl.textContent = `${min}:${sec}`;
-          }
-        });
-      });
-    });
-
-    function sharePage() {
-      if (navigator.share) {
-        navigator.share({
-          title: "The Primacy of Moral Accountability — Ninox Antolihao",
-          url: window.location.href
-        });
-      } else {
-        alert("Sharing not supported on this device.");
-      }
-    }
   </script>
 </body>
 </html>
