--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -282,12 +282,16 @@
       100% { transform: translateX(-100%); }
     }
 
-    /* Audio playlist styling */
-    .audio-wrapper {
-      margin: 1rem 0;
-      padding: 0.8rem;
-      background: #2a211e;
+    /* =========================
+       AUDIO PLAYLIST (tighter)
+    ========================== */
+    .audio-wrap {
+      max-width: 800px;
+      margin: 0.8rem auto 1.2rem auto;
+      padding: 0.75rem 0.85rem;
       border-radius: 14px;
+      background: #302521;
+      border: 1px solid rgba(255, 107, 61, 0.35);
     }
 
     #reflectionAudio {
@@ -299,14 +303,14 @@
       margin-top: 0.5rem;
       display: flex;
       flex-direction: column;
-      gap: 0.2rem;
+      gap: 0.3rem;
     }
 
     .playlist-row {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0.4rem 1rem;
+      padding: 0.45rem 0.85rem;
       background: #1f1815;
       border-radius: 8px;
       cursor: pointer;
@@ -327,12 +331,12 @@
     .playlist-main {
       display: flex;
       flex-direction: column;
-      gap: 0.8rem;
+      gap: 0.1rem;
       overflow: hidden;
     }
 
     .playlist-title {
-      font-size: 0.98rem;
+      font-size: 0.96rem;
       font-weight: 600;
       color: #f3e6dd;
       white-space: nowrap;
@@ -341,14 +345,17 @@
     }
 
     .playlist-sub {
-      font-size: 0.8rem;
+      font-size: 0.78rem;
       color: #b29587;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .playlist-duration {
-      font-size: 0.85rem;
+      font-size: 0.82rem;
       color: #c9b0a4;
-      margin-left: 1rem;
+      margin-left: 0.75rem;
       flex-shrink: 0;
     }
 
