--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -291,7 +291,7 @@
       padding: 0.75rem 0.85rem;
       border-radius: 14px;
       background: #302521;
-      border: 1px solid rgba(255, 107, 61, 0.35);
+      border: 2px solid rgba(255, 107, 61, 0.35);
     }
 
     #reflectionAudio {
@@ -319,7 +319,7 @@
     }
 
     .playlist-row:hover {
-      border-color: #ff6b3d;
+      border-color: #42251c;
     }
 
     .playlist-row.active {
