--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -314,7 +314,7 @@
       background: #1f1815;
       border-radius: 8px;
       cursor: pointer;
-      border: 1px solid #2b221f;
+      border: 1px solid #120d09;
       transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
     }
 
