--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -324,7 +324,7 @@
 
     .playlist-row.active {
       background: #322621;
-      border-color: #ff6b3d;
+      border-color: #3b1e16;
       box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
     }
 
