--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -323,8 +323,8 @@
     }
 
     .playlist-row.active {
-      background: #322621;
-      border-color: #3b1e16;
+      background: #170d09;
+      border-color: #997060;
       box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
     }
 
