--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -290,8 +290,8 @@
       margin: 0.8rem auto 1.2rem auto;
       padding: 0.75rem 0.85rem;
       border-radius: 14px;
-      background: #302521;
-      border: 2px solid rgba(255, 107, 61, 0.35);
+      background: #1f1613;
+      border: 1px solid rgba(255, 107, 61, 0.35);
     }
 
     #reflectionAudio {
