--- a/reflections/pages/divine-premise/read.html
+++ b/reflections/pages/divine-premise/read.html
@@ -30,7 +30,7 @@
       right: 0;
       z-index: 1000;
       background: #1f1815;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      border-bottom: 2px solid rgba(255, 255, 255, 0.06);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
     }
 
@@ -55,7 +55,7 @@
       width: 32px;
       height: 32px;
       border-radius: 50%;
-      border: 2px solid #ff6b3d;
+      border: 1px solid #ff6b3d;
       display: inline-flex;
       align-items: center;
       justify-content: center;
@@ -164,7 +164,7 @@
 
     .nav-toggle {
       display: none;
-      border: 1px solid rgba(255, 255, 255, 0.35);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       background: transparent;
       border-radius: 6px;
       padding: 0.2rem 0.45rem;
@@ -289,9 +289,9 @@
       max-width: 800px;
       margin: 1.2rem auto 1.2rem auto;
       padding: 0.85rem 0.75rem;
-      border-radius: 14px;
+      border-radius: 16px;
       background:#261a15;
-      border: 1px solid rgba(255, 107, 61, 0.35);
+      border: 3px solid rgba(101, 55, 14, 1);
     }
 
     #reflectionAudio {
@@ -303,7 +303,7 @@
       margin-top: 0.9rem;
       display: flex;
       flex-direction: column;
-      gap: 0.3rem;
+      gap: 0.4rem;
     }
 
     .playlist-row {
@@ -331,7 +331,7 @@
     .playlist-main {
       display: flex;
       flex-direction: column;
-      gap: 0.1rem;
+      gap: 0rem;
       overflow: hidden;
     }
 
@@ -385,7 +385,6 @@
 </head>
 
 <body>
-
   <!-- FIXED GLOBAL HEADER -->
   <header class="ref-header">
     <div class="ref-header-inner">
@@ -429,15 +428,16 @@
         </button>
       </div>
     </div>
-    
   </header>
-  <main class="page-content">
+  
      <div class="nav-buttons">
         <button onclick="history.back()">Back</button>
         <button onclick="sharePage()">Share</button>
         <button onclick="document.getElementById('reflectionAudio').scrollIntoView()">Audio</button>
       </div>
-      
+ 
+ <main class="page-content">
+ 
     <!-- Local title + subtitle + buttons (not fixed) -->
     <section style="max-width:800px;margin:0 auto 0.8rem auto;">
      <div class="scrolling-subtitle">
@@ -458,8 +458,8 @@
             <div class="playlist-row active"
                  data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-sub">Track-1</div>
                 <div class="playlist-title">The Divine Premise</div>
+                                <div class="playlist-sub">The Primacy of Moral Accountability. A Reflection on Will, Love, and Design.</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
@@ -467,8 +467,8 @@
             <div class="playlist-row"
                  data-src="/reflections/pages/divine-hiddeness/theparadoxofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-sub">Track-2</div>
                 <div class="playlist-title">Divine Hiddeness</div>
+                <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
@@ -572,3 +572,4 @@
   </script>
 </body>
 </html>
+
